fix: add font-size to Google Scholar icon to make it visible

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -723,6 +723,7 @@ input, select, textarea {
 
 				#header nav a[href*="scholar.google.com"] .ai {
 					vertical-align: middle;
+					font-size: 1.75em;
 				}
 
 				.resume-download {
